2004-01-29  Sanjay Gupta <gsanjay@novell.com>
	* FontCollection.cs: Implemented Dispose method.
	* InstalledFontCollection.cs: Removed Console.WriteLine calls.
	* PrivateFontCollection.cs: Implemented AddMemoryFont method.

2004-01-28  Jordi Mas <jordi@ximian.com>
	* FontCollection.cs: fixed marshalling issues

2004-01-28  Sanjay Gupta <gsanjay@novell.com>

	* FontCollection.cs: Implemented missing functionalities.
	* InstalledFontCollection.css: Implemented missing functionalities.
	* PrivateFontCollection.cs: Implemented few methods.

2004-01-10 Ravindra <rkumar@novell.com>

	* All Enums: Made serializable.

2003-10-12 Alexandre Pigolkine <pigolkine@gmx.de>
	* InstalledFontCollection.cs	factory removed

2003-06-22 Alexandre Pigolkine <pigolkine@gmx.de>
	* FontCollection.cs
	* InstalledFontCollection.cs
		calls to implementation added
	
2002-09-16  Nick Drochak  <ndrochak@gol.com>

	* PrivateFontCollection.cs: Fix build error.  Cannot put ComVisible on
	constructors.

2003-09-14	Piers Haken <piersh@friskit.com>

	* PrivateFontCollection.cs: import interop for ComVisible attribute

2002-09-13  Dennis Hayes (dennish@raytek.com)
* checked in for Everaldo Canuto everaldo.canuto@bol.com.br

* FontCollection.cs
* GenericFontFamilies.cs
* HotkeyPrefix.cs
* InstalledFontCollection.cs
* PrivateFontCollection.cs
* TextRenderingHint.cs